fix: remove overflow-y causing ugly scrollbar to appear

--- a/src/styles/services.styl
+++ b/src/styles/services.styl
@@ -66,6 +66,5 @@
         flex    1
         display flex
         max-height      calc(100vh - (32/basefont)em)
-        overflow-y      scroll
         justify-content center
         padding         (16/basefont)em
